# mcp-vultr

./: .gitignore  .pre-commit-config.yaml  BUILD.md  CHANGELOG.md  CLAUDE.md  CLAUDE_DESKTOP_SETUP.md  PYPI_PUBLISHING.md  README.md  TESTING.md  debug_server.py  examples.py  install_dev.sh  pyproject.toml  run_tests.py  simple_fastmcp.py  sync_version.py  test_async_fastmcp.py  test_cli_features.py  test_improvements.py  test_mirror.txt
.github/: dependabot.yml
.github/workflows/: lint.yml  publish.yml  security.yml  test.yml
src/mcp_vultr/: __init__.py  __main__.py  _version.py  backups.py  bare_metal.py  billing.py  block_storage.py  cache.py  cdn.py  cli.py  client.py  container_registry.py  dns.py  fastmcp_server.py  firewall.py  instances.py  iso.py  kubernetes.py  load_balancer.py  logging.py  managed_databases.py  marketplace.py  metrics.py  object_storage.py  os.py  plans.py  regions.py  reserved_ips.py  retry.py  server.py  serverless_inference.py  snapshots.py  ssh_keys.py  startup_scripts.py  storage_gateways.py  subaccount.py  users.py  vpcs.py
src/vultr_dns_mcp/: __init__.py  __main__.py  _version.py  cli.py  fastmcp_server.py  server.py
tests/: __init__.py  conftest.py  test_cli.py  test_client.py  test_mcp_server.py  test_package_validation.py  test_server.py  test_vultr_server.py
